--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
     rel="stylesheet"
   />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap">
   <title>Wastewyze</title>
   <meta name="description" content="" />
   <meta name="author" content="@Issaafalkattan" />
