waste wise changes done

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
   />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+  
   <title>Wastewyze</title>
   <meta name="description" content="" />
   <meta name="author" content="@Issaafalkattan" />
