add meta tag name

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+  <meta name="description" content="Explore innovative circular economy solutions, EPR strategies, and waste-to-wealth opportunities. Learn how to transform waste into valuable resources and build a sustainable future." />
+  <meta name="keywords" content="circular economy, extended producer responsibility, EPR, waste to wealth, sustainability, recycling, upcycling, resource efficiency, zero waste, green economy, cradle to cradle, sustainable business models, closed-loop systems, eco-friendly products, waste management, plastic pollution solutions, renewable resources, environmental sustainability, corporate social responsibility, sustainable supply chain, eco-innovation, sustainable materials, waste reduction strategies, circular design, life cycle assessment, sustainable packaging, e-waste recycling, biomimicry, industrial symbiosis, waste-to-energy, carbon footprint reduction, sustainable consumption, green technologies, circular business models, environmental regulations, sustainable cities, regenerative economy, circular supply chains, sustainable manufacturing, product stewardship, eco-industrial parks" />
   <link
+  
     rel="apple-touch-icon"
     sizes="72x72"
     href="img/apple-touch-icon-72x72.png"
